<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSave"
        android:fillViewport="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:hint="@string/product_name_hint"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textCapSentences"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnChooseCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etProductName"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/txtCategoryTitle"
                android:layout_toRightOf="@+id/txtCategoryTitle"
                android:background="@drawable/button_shape"
                android:hint="@string/choose_category"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnChooseCategory"
                android:layout_alignBottom="@+id/btnChooseCategory"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/etProductName"
                android:layout_marginBottom="10dp"
                android:minWidth="90dp"
                android:text="@string/category"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgItemImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btnChooseCategory"
                android:adjustViewBounds="false"
                android:background="@drawable/image_border"
                android:contentDescription="@string/product_picture"
                android:cropToPadding="true"
                android:longClickable="false"
                android:maxHeight="300dp"
                android:maxWidth="300dp"
                android:src="@android:drawable/ic_menu_gallery" />

            <ImageButton
                android:id="@+id/ibShowImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnChooseCategory"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/imgItemImage"
                android:layout_toRightOf="@+id/imgItemImage"
                app:srcCompat="@drawable/ic_show_image"
                android:background="@null"
                android:contentDescription="@string/show_product_image"
                android:scaleType="fitStart"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/ibClearImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ibShowImage"
                android:layout_alignStart="@+id/ibShowImage"
                android:layout_below="@+id/ibShowImage"
                android:layout_toEndOf="@+id/imgItemImage"
                android:layout_toRightOf="@+id/imgItemImage"
                app:srcCompat="@drawable/ic_clear_image"
                android:background="@null"
                android:contentDescription="@string/clear_product_image" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imgItemImage"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tvLastPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/etLastPrice"
                    android:layout_alignBottom="@+id/etLastPrice"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/price"
                    android:textSize="18sp"
                    android:layout_alignRight="@+id/tvUnit_CountAndPrice"
                    android:layout_alignEnd="@+id/tvUnit_CountAndPrice"
                    android:minWidth="90dp"/>

                <EditText
                    android:id="@+id/etLastPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/tvLastPrice"
                    android:layout_toRightOf="@+id/tvLastPrice"
                    android:ems="10"
                    android:hint="@string/enter_price"
                    android:inputType="numberDecimal" />

                <ImageButton
                    android:id="@+id/imgPriceChangeGraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etLastPrice"
                    android:layout_toEndOf="@+id/etLastPrice"
                    android:layout_toRightOf="@+id/etLastPrice"
                    android:contentDescription="@string/price_change_graph"
                    app:srcCompat="@drawable/ic_price_change_graph"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvUnit_CountAndPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnUnit"
                    android:layout_alignBottom="@+id/btnUnit"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:minWidth="90dp"
                    android:text="@string/unit"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/etLastPrice"
                    android:layout_alignStart="@+id/etLastPrice"
                    android:layout_below="@+id/etLastPrice"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/default_unit" />
            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/save"
        android:textColor="@android:color/black" />

</RelativeLayout>
