<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Just buying</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_products_list">Products</string>
    <string name="addItemHint">Enter product name</string>
    <string name="cross">Cross</string>
    <string name="product_name_hint">Enter a product name</string>
    <string name="product_picture">Product picture</string>
    <string name="save">Save</string>
    <string name="input_shopping_list_name">Input shopping list name</string>
...
    <string name="wrong_email_protocol_exception_message">Supports only IMAP protocol</string>
    <string name="not_assigned">Not assigned</string>
    <string name="password_mask" translatable="false">******</string>
    <string name="action_receive_shopping_list_by_email">Receive shopping list by email</string>
    <string name="send">Send</string>
    <string name="loaded">loaded</string>
    <string name="action_save_list">Save list</string>
    <string name="action_remove_all_items">Remove all items</string>
    <string name="action_go_to_in_shop_activity">Go to in shop activity</string>
    <string name="action_filter">Filter</string>
    <string name="action_edit_shopping_list">Edit</string>
    <string name="loading">Loading…</string>
    <string name="no_emails_for_loading">There are not any emails for loading</string>
    <string name="new_list">New list</string>
    <string name="HelpInShop1">Swipe to cross out items. To undo crossing out, swipe again.\n\nYou can change the way of crossing out (by click) in the settings.\n</string>
    <string name="pref_key_show_help_screens">Show help</string>
    <string name="got_it">Got it</string>
    <string name="action_edit_categories_list">Categories</string>
    <string name="item_already_added">Item was added before</string>
    <string name="category">Category:</string>
    <string name="new_category">New category</string>
    <string name="category_title">Category</string>
    <string name="choose_category">Choose category…</string>
    <string name="three_dots" translatable="false">%1$s…</string>
    <string name="category_not_assigned">Category was not assigned</string>
    <string name="order">Order</string>
    <string name="no_name">No name</string>
    <string name="product_is_exist">Product with the same name is already exist.</string>
    <string name="divider" translatable="false">,</string>
    <string name="product_divider" translatable="false">;</string>
    <string name="load">Load</string>
    <string name="text_for_loading">Type or paste text in this format:\nMilk, 2;  Bread, 1; Wine, 3</string>
    <string name="menu_button_identifier">More options</string>
    <string name="without_category">Without category</string>
...
    <string name="friend_invitation_question">This application is an electronic shopping list JustBuying. Download and register ;)</string>
    <string name="pref_key_sort_shopping_lists_in_reverse_order" translatable="false">pref_key_sort_shopping_lists_in_reverse_order</string>
    <string name="pref_sort_shopping_lists_in_reverse_order">Shopping lists sort order</string>
    <string name="pref_key_sort_shopping_lists_in_reverse_order_summary">New shopping list will be added to the beginning</string>
    <string name="show_product_image">Show product image</string>
    <string name="clear_product_image">Clear product image</string>
    <string name="product_image_activity_title">Image of %1$s</string>
    <string name="pref_key_show_prices" translatable="false">pref_key_show_prices</string>
    <string name="pref_show_prices">Show prices</string>
    <string name="shopping_list_info">Total sum: %1$s. Left to by on: %2$s</string>
    <string name="count">Qty:</string>
    <string name="price">Price:</string>
    <string name="default_unit">pc.</string>
...
