...
        android:layout_below="@id/common_toolbar"
        android:layout_above="@+id/adView">

        <com.RightDirection.ShoppingList.views.CustomRecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvProducts"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabProductListAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/ic_add_white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
...
