<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".activities.ChooseUnitActivity">

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/choose_unit_activity_no_data_text"
        android:visibility="gone"
        android:textSize="@dimen/text_size_large"
        android:layout_alignParentLeft="true" />

    <com.RightDirection.ShoppingList.views.CustomRecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rvUnits"
        android:layout_alignParentLeft="true" />
</RelativeLayout>